@@ -459,24 +459,10 @@ name|joins
 operator|.
 name|add
 argument_list|(
-operator|(
-name|join
+name|relationship
 operator|.
-name|getSource
+name|getSourceEntityName
 argument_list|()
-operator|==
-literal|null
-condition|?
-literal|"~"
-else|:
-name|join
-operator|.
-name|getSource
-argument_list|()
-operator|.
-name|getName
-argument_list|()
-operator|)
 operator|+
 literal|"."
 operator|+
@@ -487,24 +473,10 @@ argument_list|()
 operator|+
 literal|">"
 operator|+
-operator|(
-name|join
+name|relationship
 operator|.
-name|getTarget
+name|getTargetEntityName
 argument_list|()
-operator|==
-literal|null
-condition|?
-literal|"~"
-else|:
-name|join
-operator|.
-name|getTarget
-argument_list|()
-operator|.
-name|getName
-argument_list|()
-operator|)
 operator|+
 literal|"."
 operator|+
